25 March 2024
	Add support for a "metadata" section in the preset definitions. Each
	preset now contains a "metadata" section and a "preset" section,
	which contains the query parameters.

	All current examples now use the same set of generic templates.

	Preset-specific customizations, such as the report title, are now
	defined in the "metadata" sections.

	Preset-template association is no longer done via soft-links. Each
	preset defines the template it uses in its "metadata.template"
	field.

	Each preset may now define its default output file name in the
	"metadata.output" field. This can be overriden with the --output
	command line option.

	Documentation updated and this CHANGELOG file added.

2 April 2024
	A regression can now be "active" (when the test hasn't passed
	since the regression was created) or "inactive" (when a test run
	has passed since it was created). This is encoded in the "result"
	field of a regression: result="fail" for "active" regressions and
	"pass" for "inactive" ones.

	Each regression now stores a list of test runs that ran after the
	regression was detected. For inactive regressions, it stores up to
	(and including) the first test run that passed after the
	regression was created.

	Generic regression templates updated to print this new
	information.